# essential-cpp-notes

./: .gitignore  CMakeLists.txt  README.md
codes/asserts/: CMakeLists.txt
codes/asserts/ch01/: cpp_demo.cpp  first_demo.cpp  guess_value.cpp
codes/asserts/ch02/: answer_fibon_value.cpp  answer_fibon_value2.cpp  answer_fibon_value3.cpp  answer_fibon_value4.cpp  sort_vector.cpp
codes/asserts/ch03/: filter_ver2.cpp  filter_ver3.cpp  generic_find.cpp  generic_iterator_find.cpp  iostream_iterator.cpp  less_than_10.cpp
codes/asserts/ch04/: lessthan_function_object.cpp  matrix.h  stack.cpp  stack.h  triangular1_main.cpp  triangular2_main.cpp  triangular3_main.cpp  triangular_iterator.cpp  triangular_iterator.h  triangular_iterator_main.cpp
codes/asserts/ch05/: audiobook_main1.cpp  audiobook_main2.cpp  book_main.cpp  libmat.cpp  libmat.h  libmat_main.cpp
codes/asserts/ch05/v1/: fibonacci.cpp  fibonacci.h  fibonacci_main.cpp  num_sequence.cpp  num_sequence.h
codes/asserts/ch05/v2/: fibonacci.cpp  fibonacci.h  fibonacci_main.cpp  num_sequence.cpp  num_sequence.h
codes/asserts/ch06/binary_tree/: binary_tree.hpp  main.cpp
codes/asserts/ch06/lessthan/: lessthan.hpp  main.cpp
codes/asserts/ch06/num_sequence/: fibonacci.hpp  main.cpp
codes/asserts/ch06/print_it/: main.cpp  print_it.hpp
codes/asserts/ch07/: iterator_overflow.hpp  triangular.cpp  triangular.h  triangular_iterator.cpp  triangular_iterator.h  triangular_iterator_main.cpp
codes/exercises/: CMakeLists.txt
codes/exercises/ch01/: ex04.cpp  ex05.cpp  ex06.cpp  ex07.cpp
codes/exercises/ch01/files/: text.txt
codes/exercises/ch02/: ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp  ex05.cpp  ex06.cpp
codes/exercises/ch03/: ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp
codes/exercises/ch03/files/: column.txt  families.txt
codes/exercises/ch04/: ex03.cpp
codes/exercises/ch04/ex01/: ex01.cpp
codes/exercises/ch04/ex02/: ex02.cpp  stack.h
codes/exercises/ch04/ex04/: main.cpp  user_profile.cpp  user_profile.h
codes/exercises/ch04/ex05/: main.cpp  matrix.cpp  matrix.h
codes/exercises/ch05/ex01/: lifo_stack.cpp  lifo_stack.h  main.cpp  peekback_stack.cpp  peekback_stack.h  stack.h
codes/exercises/ch05/ex02/: main.cpp  stack.cpp  stack.h
codes/exercises/ch06/ex02/: main.cpp  matrix.hpp
codes/exercises/ch07/ex03/: main.cpp  peekback_stack.cpp  peekback_stack.h  stack.cpp  stack.h  stack_exception.hpp
