project(codes-asserts)

# 第1章
add_executable(as-01-01 ch01/first_demo.cpp)
add_executable(as-01-02 ch01/guess_value.cpp)

# 第2章
add_executable(as-02-01 ch02/answer_fibon_value.cpp)
add_executable(as-02-02 ch02/answer_fibon_value2.cpp)
add_executable(as-02-03 ch02/sort_vector.cpp)
add_executable(as-02-04 ch02/answer_fibon_value3.cpp)
add_executable(as-02-05 ch02/answer_fibon_value4.cpp)