project(codes-exercises)

# 第1章练习
add_executable(ex-01-04 ch01/ex04.cpp)
add_executable(ex-01-05 ch01/ex05.cpp)
add_executable(ex-01-06 ch01/ex06.cpp)
add_executable(ex-01-07 ch01/ex07.cpp)

# 第2章练习
add_executable(ex-02-01 ch02/ex01.cpp)
add_executable(ex-02-02 ch02/ex02.cpp)
add_executable(ex-02-03 ch02/ex03.cpp)
add_executable(ex-02-04 ch02/ex04.cpp)
add_executable(ex-02-05 ch02/ex05.cpp)
add_executable(ex-02-06 ch02/ex06.cpp)
