project(codes-exercises)

# 第1章练习
add_executable(ex-01-04 ch01/ex04.cpp)
add_executable(ex-01-05 ch01/ex05.cpp)
add_executable(ex-01-06 ch01/ex06.cpp)
add_executable(ex-01-07 ch01/ex07.cpp)

# 第2章练习
add_executable(ex-02-01 ch02/ex01.cpp)
add_executable(ex-02-02 ch02/ex02.cpp)
add_executable(ex-02-03 ch02/ex03.cpp)
add_executable(ex-02-04 ch02/ex04.cpp)
add_executable(ex-02-05 ch02/ex05.cpp)
add_executable(ex-02-06 ch02/ex06.cpp)

# 第3章练习
add_executable(ex-03-01 ch03/ex01.cpp)
add_executable(ex-03-02 ch03/ex02.cpp)
add_executable(ex-03-03 ch03/ex03.cpp)
add_executable(ex-03-04 ch03/ex04.cpp)

# 第4章练习
add_executable(ex-04-01 ch04/ex01/ex01.cpp)
add_executable(ex-04-02 ch04/ex02/ex02.cpp)
add_executable(ex-04-03 ch04/ex03.cpp)
add_executable(ex-04-04 ch04/ex04/main.cpp ch04/ex04/user_profile.cpp)
add_executable(ex-04-05 ch04/ex05/main.cpp ch04/ex05/matrix.cpp)

# 第5章练习
add_executable(ex-05-01 ch05/ex01/main.cpp ch05/ex01/lifo_stack.cpp ch05/ex01/peekback_stack.cpp)
add_executable(ex-05-02 ch05/ex02/main.cpp ch05/ex02/stack.cpp ch05/ex02/peekback_stack.cpp)

# 第6章
add_executable(ex-06-02 ch06/ex02/main.cpp)